render video player

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -12,6 +12,8 @@ target 'boalt' do
 
   pod 'RNSVG', :path => '../node_modules/react-native-svg'
 
+  pod 'react-native-video', :path => '../node_modules/react-native-video'
+
   target 'boaltTests' do
     inherit! :complete
     # Pods for testing
