--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "16.13.1",
     "react-native": "0.63.2",
     "react-native-google-cast": "^3.3.0",
-    "react-native-svg": "^12.1.0"
+    "react-native-svg": "^12.1.0",
+    "react-native-video": "^4.4.5"
   },
   "devDependencies": {
     "@babel/core": "^7.11.1",
