--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-native": "0.63.2",
     "react-native-google-cast": "^3.3.0",
     "react-native-svg": "^12.1.0",
-    "react-native-video": "^4.4.5"
+    "react-native-video": "^4.4.5",
+    "react-native-video-controls": "^2.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.11.1",
